--- a/public/elearnigClass/css/createClass.css
+++ b/public/elearnigClass/css/createClass.css
@@ -252,9 +252,12 @@ body,html{
     border: 1px solid #F26C00;
 }
 .course-listText{
-    margin-bottom: 15px;
+    margin-bottom: 13px;
     line-height:1;
     font-size:14px;
+}
+.course-listTextLast{
+    margin-bottom: 0;
 }
 .course-Light_grey{
     color: #888;
