--- a/public/elearnigClass/css/home.css
+++ b/public/elearnigClass/css/home.css
@@ -252,6 +252,7 @@ body {
 .username {
     color: #9DD1E9;
     font-size: 15px;
+    max-width: 200px;
 }
 
 .avatar, .username, .exit {
@@ -325,7 +326,7 @@ body {
     line-height: 1.5;
     font-size: 14px;
 }
-.schedule_content_chapter span{
+.schedule_content_chapter span, .username{
     display: inline-block;
     text-overflow: ellipsis;
     overflow: hidden;
@@ -487,8 +488,13 @@ body {
     width: 100%;
     font-size: 14px;
 }
+.release-bottom span{
+    line-height: 1;
+    display: inline-block;
+    float: right;
+}
 .table-right{
-    width: calc(100% - 86px);
+    width:510px;
     display: inline-block;
 }
 .table_title{
@@ -601,6 +607,7 @@ input, textarea, button{
     color: #666;
     line-height: 1.3;
     border-radius: 4px;
+    margin-left: 4px;
 }
 .add-CourseName{
     width: 496px;
@@ -700,7 +707,12 @@ input, textarea, button{
     white-space: nowrap;
 }
 .Publish-btn{
-    margin-right: 6px;
+    line-height: 1;
+    padding: 0;
+    margin: 0 6px 0 0;
+    position: relative;
+    top:2px;
+    float: right;
 }
 ::-webkit-scrollbar {
     width: 6px;
