--- a/public/schoolClass/css/syncClassroom.css
+++ b/public/schoolClass/css/syncClassroom.css
@@ -31,16 +31,16 @@ body {
 }
 
 .inner {
-    position: absolute;
+/*    position: absolute;
     left: 50%;
-    top: 50%;
+    top: 50%;*/
     width: 100%;
     height: 100%;
-    -webkit-transform: translate(-50%, -50%);
+  /*  -webkit-transform: translate(-50%, -50%);
     -moz-transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
     -o-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);*/
 }
 
 .my_flex {
@@ -79,6 +79,7 @@ body {
 .box_cont {
     overflow: hidden;
     height: calc(100% - 56px);
+    width: 100%;
 }
 
 .left_box {
@@ -105,17 +106,18 @@ body {
     line-height: 1;
     font-weight: bold;
     position: relative;
+    height: 19px;
 }
 .left_box .header:after{
     position: absolute;
     content: "";
     width: 100%;
     border-bottom: 1px #cfcfcf solid;
-    -webkit-transform: translateY(-50%);
+    /*-webkit-transform: translateY(-50%);
     -moz-transform: translateY(-50%);
     -ms-transform: translateY(-50%);
     -o-transform: translateY(-50%);
-    transform: translateY(-50%);
+    transform: translateY(-50%);*/
     bottom: 0;
     left: 0;
 }
@@ -135,30 +137,28 @@ body {
 }
 
 #classInfo {
-    background: url("../img/icon_nav_course.png") no-repeat 42px 16px;
-    background-size: 15px;
+    background: url("../img/icon_nav_review.png") no-repeat 42px 16px;
+    background-size: 14px;
+}
+#classInfo.active {
+    background: #ebeef5 url("../img/icon_nav_review.png") no-repeat 42px 16px;
+    background-size: 14px;
 }
 
 #classReview {
-    background: url("../img/icon_nav_course.png") no-repeat 42px 16px;
-    background-size: 15px;
+    background: url("../img/icon_nav_myFile.png") no-repeat 42px 16px;
+    background-size: 16px;
 }
 
 #classReview.active {
-    background: #ebeef5 url("../img/icon_nav_course.png") no-repeat 42px 16px;
-    background-size: 15px;
+    background: #ebeef5 url("../img/icon_nav_myFile.png") no-repeat 42px 16px;
+    background-size: 16px;
 }
 
 #myFile {
     background: url("../img/icon_nav_file.png") no-repeat 42px 16px;
     background-size: 12px;
 }
-
-#classInfo.active {
-    background: #ebeef5 url("../img/icon_nav_course.png") no-repeat 42px 16px;
-    background-size: 15px;
-}
-
 #myFile.active {
     background: #ebeef5 url("../img/icon_nav_file.png") no-repeat 42px 16px;
     background-size: 12px;
@@ -176,7 +176,7 @@ body {
     overflow: hidden;
 }
 
-#classInfo, #myFile {
+#classInfo, #myFile, #classReview {
     cursor: pointer;
 }
 
@@ -240,9 +240,9 @@ body {
 
 .exit {
     background: url("../img/icon_quite.png") no-repeat right center;
-    background-size: 18px;
+    background-size: 17px;
     font-size: 0;
-    width: 18px;
+    width: 17px;
     height: 56px;
     margin-left: 45px;
 }
