--- a/public/schoolClass/css/classMobileAssistant.css
+++ b/public/schoolClass/css/classMobileAssistant.css
@@ -175,4 +175,53 @@ body{
 #iframeBox{
     overflow: hidden;
 }
+#pushTopic{
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background: red;
+    color: white;
+    line-height: 50px;
+    text-align: center;
+    font-size:12px;
+}
+.topic_box{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 350px;
+    background: white;
+    transition: 0.2s;
+    z-index:2;
+    transform: translate(0,100%);
+}
+.topic_body{
+    overflow: auto;
+    height: 305px;
+}
+.topic_list{
+
+}
+.topic_item{
+    width: 250px;
+    height: 50px;
+    overflow: hidden;
+    display: inline-block;
+}
+.pushTopic{
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+    width: 80px;
+    height: 80px;
+    line-height: 80px;
+    text-align: center;
+    border-radius: 50%;
+    background: darkorchid;
+    color: white;
+}
 
