--- a/public/schoolClass/css/classMobileAssistant.css
+++ b/public/schoolClass/css/classMobileAssistant.css
@@ -191,6 +191,7 @@ body{
     transition: 0.2s;
     z-index:2;
     transform: translate(0,100%);
+    display: none;
 }
 .topic_body{
     height: calc(100% - 40px);
