--- a/public/schoolClass/css/recordList_local.css
+++ b/public/schoolClass/css/recordList_local.css
@@ -1,46 +1,151 @@
-body{
+body,html{
     border: 0;
     margin: 0;
     padding: 0;
+    font-family: "Microsoft YaHei", "Hiragino Sans GB", Helvetica, Arial;
+    overflow: hidden;
+    height: 100%;
+}
+.text_hidden{
+    display: inline-block;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+}
+.my_flex{
+    -webkit-display: flex;
+    -moz-display: flex;
+    -ms-display: flex;
+    -o-display: flex;
+    -khtml-display: flex;
+    display: flex;
+    align-items: center;
 }
 .nav{
-    width: 100%;
-    height: 50px;
-    background: red;
-    line-height: 50px;
+    padding: 15px 20px 15px 30px;
+    color: #545454;
+    font-size: 14px;
+    overflow: hidden;
+    position: relative;
+    height: 34px;
 }
 .nav_right{
-    width: 50%;
     float: right;
+    color: #333;
+    font-size: 15px;
+    padding-top: 3px;
+    display: flex;
+    display: -webkit-flex;
+    align-items: center;
 }
-.list_title{
-    overflow: hidden;
-    width: 100%;
-}
-.list_titleItem{
-    overflow: hidden;
-    margin-top: 5px;
+.nav_right>span{
     display: inline-block;
-    width: 19%;
-    box-sizing: border-box;
-    text-align: center;
-    height: 30px;
-    line-height: 30px;
-    background: darkblue;
 }
-.list_item{
-    overflow: hidden;
-    width: 100%;
+#dir_input{
+    font-size: 12px;
+    border: 1px #DCDCDC solid;
+    padding: 8px 12px;
+    height: 34px;
+    margin: 0 20px 0 10px;
+    width: 258px;
+    box-sizing: border-box;
+}
+#updateDir{
+    background: url("../img/icon_pathModifyBtn.png") no-repeat;
+    background-size: 16px;
+    width: 16px;
+    height: 16px;
+    padding-top: 16px;
+    box-sizing: border-box;
+    cursor: pointer;
 
 }
-.list_bodyItem{
-    overflow: hidden;
-    margin-top: 5px;
-    display: inline-block;
-    width: 19%;
+.record_title{
+    color: #333;
+    font-size: 22px;
+    float: left;
+    margin: 0;
+    line-height: 1;
+    padding-top: 7px;
+    font-weight: bold;
+}
+.list_title{
+    background-color: #fff;
+    line-height: 46px;
+    color: #333;
+    font-size: 16px;
+    padding-right: 24px;
+}
+.list_view{
+    height: calc(100% - 64px);
+}
+.list_body{
+    background-color: white;
+    font-size: 14px;
+    color: #888;
+    overflow-y: auto;
+    height: calc(100% - 46px);
+}
+.list_item{
+    height: 63px;
+    padding-right: 24px;
+    border-bottom: 1px solid #ebebeb;
+}
+.filePic{
+    margin-right: 15px;
+    width: 24px;
+    height: auto;
+    vertical-align: middle;
+}
+.noomWidth{
+    width: calc(100% - 324px);
+    padding-left: 30px;
     box-sizing: border-box;
-    text-align: center;
-    height: 30px;
-    line-height: 30px;
-    background: aqua;
+}
+.courseName{
+    width: 55%;
+    display: inline-block;
+}
+.fileName{
+     width: 45%;
+     display: inline-block;
+ }
+.list_body .courseName{
+    font-size: 15px;
+    color: #333;
+}
+.time{
+    width: 160px;
+}
+.size{
+    width: 110px;
+}
+.option{
+    width: 54px;
+}
+.option button{
+    background: url("../img/icon_recordPlay.png") no-repeat;
+    width: 14px;
+    height: 14px;
+    background-size: cover;
+    outline: none;
+    border: 0;
+    font-size: 0;
+    vertical-align: middle;
+}
+::-webkit-scrollbar {
+    width: 8px;
+    height: 12px;
+}
+
+/* 这是针对缺省样式 (必须的) */
+::-webkit-scrollbar-thumb {
+    background-color: #ccc;
+    border-radius: 9px;
+    -webkit-border-radius: 9px;
+}
+
+/* 滑块颜色 */
+::-webkit-scrollbar-button {
+    background-color: initial;
 }
