--- a/public/schoolClass/css/syncClassroom.css
+++ b/public/schoolClass/css/syncClassroom.css
@@ -95,7 +95,7 @@ body {
     font-size: 16px;
     line-height: 46px;
     padding-left: 67px;
-    margin-top: 20px;
+    margin-top: 10px;
 }
 
 .left_box .header {
@@ -156,13 +156,15 @@ body {
 }
 
 #localRecord {
-    background: url("../img/icon_nav_myFile.png") no-repeat 42px 16px;
+    background: url("../img/icon_recordBar.png") no-repeat 42px 19px;
     background-size: 16px;
+    cursor: pointer;
 }
 
 #localRecord.active {
-    background: #ebeef5 url("../img/icon_nav_myFile.png") no-repeat 42px 16px;
+    background: #ebeef5 url("../img/icon_recordBarActive.png") no-repeat 42px 19px;
     background-size: 16px;
+    cursor: pointer;
 }
 
 #myFile {
@@ -175,7 +177,7 @@ body {
 }
 
 .left_box > div:last-child {
-    margin-top: 20px;
+    margin-top: 10px;
 }
 
 .right_box {
@@ -200,6 +202,7 @@ body {
 
 .localRecord_box{
     display: none;
+    height: 100%;
 }
 
 .classInfo_box {
@@ -227,7 +230,7 @@ body {
 
 .localRecord_box > iframe {
     width: 100%;
-    height: 100vh;
+    height:100%;
 }
 
 .avatar {
