--- a/public/schoolClass/css/record_list.css
+++ b/public/schoolClass/css/record_list.css
@@ -7,7 +7,7 @@ html,body, input,ul{
 	font-size:10px;
 }
 html{
-	width:100%
+	width:100%;
 }
 *{
           -webkit-touch-callout:none;
@@ -1631,7 +1631,7 @@ img{
   -khtml-user-select:none;
   -moz-user-select:none;
   -ms-user-select:none;
-  user-select:none;x
+  user-select:none;
 } 
 .elearining_search_img{
 	width:10rem;
