--- a/public/schoolClass/css/recordList_local.css
+++ b/public/schoolClass/css/recordList_local.css
@@ -51,6 +51,7 @@ body,html{
     box-sizing: border-box;
     overflow-x: auto;
     color: #888;
+    white-space: nowrap;
 }
 #dir_input::-webkit-scrollbar {
    display: none;
