--- a/public/drawboard/drawboard.css
+++ b/public/drawboard/drawboard.css
@@ -73,7 +73,7 @@ button, a{
 }
 
 #drawContainer, #console-container {
-    box-shadow: 0px 0px 8px 3px #bbb;
+    box-shadow: 0 0 8px 3px #bbb;
     border: 20px solid #dfdfdf;
     border-radius:4px;
 }
@@ -115,7 +115,7 @@ button, a{
     height:723px;
 }
 .draw_line{
-	margin: 0px; 
+	margin: 0;
 	padding:10px 0;
 	 border-top: 1px solid #dfdfdd; 
 }
@@ -256,7 +256,7 @@ button, a{
 	-ms-transform:translate(-50%, -50%); /* IE 9 */
 	-moz-transform:translate(-50%, -50%); /* Firefox */
 	-webkit-transform:translate(-50%, -50%); /* Safari 和 Chrome */
-	-o-transform:translate(-50%, -50%);	
+	-o-transform:translate(-50%, -50%);
 	overflow: hidden;
 	background:#fff;
 }
@@ -320,11 +320,11 @@ button, a{
 	position: absolute;
     top:50%;
     left:50%;
-	transform:translate(-50%, -50%);
 	-ms-transform:translate(-50%, -50%); /* IE 9 */
 	-moz-transform:translate(-50%,-50%); /* Firefox */
 	-webkit-transform:translate(-50%, -50%); /* Safari 和 Chrome */
-	-o-transform:translate(-50%, -50%);	
+	-o-transform:translate(-50%, -50%);
+    transform:translate(-50%, -50%);
 	overflow: hidden;
 	background:#292929;
 }
@@ -333,25 +333,26 @@ button, a{
 	height:70px !important;
 	line-height:70px !important;
 	text-align:center;
-	display: flex;
-	display: -webkit-flex;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
     justify-content: center;
-     -webkit-justify-content
     }
 .draw_page_app_a, .draw_page_app_span{
 	color: #fff;
     text-decoration: none;
     font-weight: normal;
-    margin: 0px;
+    margin: 0;
     padding:0;
     display:inline-flex;
     font-family: sans-serif;
     width:100px;
     height:70px;
-    justify-content: center;
     -webkit-justify-contetn:center;
-    align-items: center;
+    justify-content: center;
     -webkit-align-items:center;
+    align-items: center;
 }
 .draw_page_app_a:active, .draw_page_app_span:active{
 	color: #e8e8e8;
@@ -361,7 +362,7 @@ button, a{
 }
 .draw_html{
 	min-width:1170px;
-	height:100% !important!;
+	height:100% !important;
 	margin:auto
 }
 .draw_pen_img{
@@ -492,7 +493,7 @@ button, a{
 	}
 	.draw_pen_app_img img{
 	position:relative;
-	top:0px;
+	top:0;
     }
     .pen_color_selected, .eraser_selected{
     background: rgba(51, 51, 51, 0.52) !important;
@@ -567,7 +568,7 @@ button, a{
     position: absolute;
     content: "";
     top: 0;
-    width: 0;
+    left: 0;
     pointer-events: none;
     box-sizing: border-box;
     border: none;
@@ -633,21 +634,21 @@ button, a{
 	background-size:36px;
 }
 .draw_bar i.pageleft{
-	background:url("../images/main_icon_left.png?v=1");
+	background:url("../images/main_icon_left.png");
 	background-size: 24px;
     margin-top: 10px;
     width: 24px;
     height: 24px;
 }
 .draw_bar i.pageright{
-	background:url("../images/main_icon_right.png?v=1");
+	background:url("../images/main_icon_right.png");
 	background-size: 24px;
     margin-top: 10px;
     width: 24px;
     height: 24px;
 }
 .draw_bar_pageleft{
-	background:url("../images/main_icon_left.png?v=1");
+	background:url("../images/main_icon_left.png");
 	background-size: 48px;
     width: 48px;
     height: 48px;
@@ -659,7 +660,7 @@ button, a{
     margin-top: 2px;
 }
 .draw_bar_pageright{
-	background:url("../images/main_icon_right.png?v=1");
+	background:url("../images/main_icon_right.png");
 	background-size: 48px;
     width: 48px;
     height: 48px;
@@ -708,11 +709,11 @@ button, a{
 	position: absolute;
     top:50%;
     left:50%;
-	transform:translate(-50%, -50%);
 	-ms-transform:translate(-50%, -50%); /* IE 9 */
 	-moz-transform:translate(-50%, -50%); /* Firefox */
 	-webkit-transform:translate(-50%, -50%); /* Safari 和 Chrome */
-	-o-transform:translate(-50%, -50%);	
+	-o-transform:translate(-50%, -50%);
+    transform:translate(-50%, -50%);
 }
 .control_bar{
 	width:100%;
