--- a/public/drawboard/drawboard.css
+++ b/public/drawboard/drawboard.css
@@ -671,6 +671,103 @@ button, a{
     float: left;
     margin-top: 2px;
 }
+.draw_bar_music{
+    background:url("../images/main_icon_music.png");
+    background-size: 48px;
+    width: 48px;
+    height: 48px;
+    display: inline-block;
+    text-decoration: none;
+    text-align: center;
+    cursor: pointer;
+    float: left;
+    margin-top: 2px;
+    margin-left: 21px;
+}
+.draw_bar_musicVoice{
+    width: 185px;
+    height: 34px;
+    margin: 7px 0 0 30px;
+    background: rgba(0,0,0,0.15);
+    border-radius: 6px;
+    display: inline-block;
+    line-height: 34px;
+    color: #fff;
+    font-size: 16px;
+    padding: 0 50px;
+    position: relative;
+}
+.draw_bar_musicSuspend, .draw_bar_musicVoiceIcon, .draw_bar_musicPlayIcon{
+    width: 48px;
+    height: 48px;
+    position: absolute;
+}
+.draw_bar_musicSuspend{
+    background: url("../images/main_icon_musicSuspend.png") no-repeat;
+    background-size: 100% 100%;
+    left:0;
+    top: -7px;
+}
+.draw_bar_musicPlayIcon{
+    background: url("../images/main_icon_musicplay.png") no-repeat;
+    background-size: 100% 100%;
+    left:0;
+    top: -7px;
+}
+.draw_bar_musicVoiceIcon{
+    background: url("../images/main_icon_musicVoice.png") no-repeat;
+    background-size: 100% 100%;
+    right:0;
+    top: -7px;
+}
+.draw_bar_musicSound{
+    background: rgba(0,0,0,0.15);
+    border-radius: 10px;
+    width: 170px;
+    height: 24px;
+    display: inline-block;
+    position: fixed;
+    top: -26px;
+    right: 0;
+}
+.draw_bar_musicSound .progress, .draw_bar_musicSound .progress .progress-bar{
+    height: 3px;
+    display: inline-block;
+    border-radius:2px;
+}
+.draw_bar_musicSound .progress{
+    width: 140px;
+    margin: 11px 10px 0;
+    background: #A5A5A5;
+    position: relative;
+    cursor: e-resize;
+}
+.draw_bar_musicSound .progress .progress-bar{
+    background: #F7F7F7;
+    width: 40px;
+    float: left;
+    position: relative;
+}
+.draw_bar_musicSound .progress .progress-bar .dragger{
+    width: 16px;
+    height: 16px;
+    background: #fff;
+    box-shadow: 1px 1px 4px 0 rgba(30,30,30,0.3);
+    border-radius: 50%;
+    position: absolute;
+    top: -8px;
+    right: -8px;
+}
+.draw_bar_musicSound-arrow {
+    width:0;
+    height:0;
+    border-left:8px solid transparent;
+    border-right:8px solid transparent;
+    border-top:8px solid rgba(0,0,0,0.15);
+    position: fixed;
+    right: 12px;
+    top: -2px;
+}
 .draw_bar_top{
 	margin-top:15px;
 }
@@ -715,6 +812,16 @@ button, a{
 	-o-transform:translate(-50%, -50%);
     transform:translate(-50%, -50%);
 }
+.center_music{
+    position: absolute;
+    top:50%;
+    left:0;
+    -ms-transform:translate(0, -50%); /* IE 9 */
+    -moz-transform:translate(0, -50%); /* Firefox */
+    -webkit-transform:translate(0, -50%); /* Safari 和 Chrome */
+    -o-transform:translate(0, -50%);
+    transform:translate(0, -50%);
+}
 .control_bar{
 	width:100%;
 	height:70px;
@@ -726,4 +833,9 @@ button, a{
     color:#333;
     position: absolute;
     bottom:0
+}
+.text-ellipsis{
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
