--- a/public/schoolClass/css/record_list.css
+++ b/public/schoolClass/css/record_list.css
@@ -67,19 +67,19 @@ ul, li{
 a, a:hover, button, input{
 	text-decoration:none;
 	outline:0;
-	
+
 }
 a{
 	-webkit-tap-highlight-color:rgba(255,0,0,0);
 	-webkit-appearance: none;
 }
 input[type=button], input[type=submit], input[type=file], button {
-	cursor: pointer; 
-	-webkit-appearance: none; 
-} 
+	cursor: pointer;
+	-webkit-appearance: none;
+}
 :root{
-	-webkit-tap-highlight-color: rgba(0,0,0,0); 
-	-webkit-tap-highlight-color: transparent; 
+	-webkit-tap-highlight-color: rgba(0,0,0,0);
+	-webkit-tap-highlight-color: transparent;
 }
 a, a:hover, button{
 	cursor: pointer;
@@ -102,11 +102,11 @@ img{
 }
 .list_bg_gray{
 	background:#F4F4F4;
-	height:1.5rem;	
+	height:1.5rem;
 }
 .record_list{
 	padding:0 2rem;
-	
+
 }
 .record_li{
 	padding:1.5rem 0;
@@ -120,7 +120,7 @@ img{
 	overflow: hidden;
 	text-overflow: ellipsis;
 	white-space: nowrap;
-	
+
 }
 .record_til {
     font-size: 1.6rem;
@@ -247,7 +247,7 @@ img{
 }
 .pass_record a{
 	color:#638BB7;
-	font-size:1.4rem;  
+	font-size:1.4rem;
 }
 .pass_record a:hover{
 	color:#4776AB;
@@ -323,7 +323,7 @@ img{
 }
 .pass_record_blue{
 	color:#638BB7;
-	font-size:1.4rem;  
+	font-size:1.4rem;
 }
 .pass_record_m_blue{
 	color:#638BB7;
@@ -598,7 +598,7 @@ img{
     background:#f9f9f9;
     text-indent:3.4rem;
     box-shadow: none;
-    -moz-box-shadow:none;/*firefox*/  
+    -moz-box-shadow:none;/*firefox*/
     -webkit-box-shadow:none;/*webkit*/
     border:none;
     height:4rem;
@@ -608,7 +608,7 @@ img{
 .search_input, .search_input placeholder{
     padding: 0.7rem 0 0 0;
     box-shadow: none;
-    -moz-box-shadow:none;/*firefox*/  
+    -moz-box-shadow:none;/*firefox*/
     -webkit-box-shadow:none;/*webkit*/
     border:none;
     outline:none;
@@ -709,7 +709,7 @@ img{
     border-radius: 4px;
     float: right;
     margin-top: 0.4rem;
-    font-size:1.6rem	
+    font-size:1.6rem
 }
 .btn_red_f:hover{
 	background:#e89487
@@ -734,7 +734,7 @@ img{
      float:left;
      margin-top: 0.6rem;
   }
-  
+
   .course_checked{
      width: 2.4rem;
      height: 2.4rem;
@@ -835,7 +835,7 @@ img{
 
 
 	::-webkit-scrollbar-thumb{
-		  background-color: #ccc; 
+		  background-color: #ccc;
 		  border-radius: 9px;
 		  -webkit-border-radius: 9px;
 	} /* 滑块颜色 */
@@ -878,7 +878,7 @@ img{
 }
 .group_box1{
 	flex-flow: row wrap;
-	justify-content: flex-start;	
+	justify-content: flex-start;
 }
 .group_box2{
 	flex-flow: row wrap;
@@ -890,7 +890,7 @@ img{
 }
 .group_box4{
 	flex-flow: row nowrap;
-	justify-content: flex-start;	
+	justify-content: flex-start;
 }
 .group_box1_item_2{
 	width:33.33% !important;
@@ -1106,7 +1106,7 @@ img{
 }
 
 .app_form_ri input, .app_form_ri select,  .friend_form input{
-   
+
     margin-left: 1rem;
     margin-right: 0.6rem;
 
@@ -1313,7 +1313,7 @@ img{
   }
 .app_money_img_new{
 	float:none !important;
-	
+
 }
 .app_img_new{
     margin-left: -0.5rem !important;
@@ -1333,7 +1333,7 @@ img{
 }
 .app_list_te_zi_new img{
 	position:absolute;
-	top:3rem;	
+	top:3rem;
 }
  .app_money_img .del{
  	background:url(../img/del_48_48.png) no-repeat;
@@ -1357,10 +1357,10 @@ img{
 }
 .item_bottom_text{
 	text-align:center;
-	border-bottom: 1.5rem #f4f4f4 solid;		
+	border-bottom: 1.5rem #f4f4f4 solid;
 }
 .item_bottom_text span{
-	color:#b7b7b5;	
+	color:#b7b7b5;
 }
 .item_bottom_text span:before{
 	    content: "";
@@ -1428,7 +1428,7 @@ img{
     top: 1.6rem;
     right: 2rem;
     width: 8rem;
-    height: 8rem;  
+    height: 8rem;
 }
 .shenpi_icon_r_2{
 	background:url(../img/shenpi_icon_r_2.png) no-repeat;
@@ -1438,7 +1438,7 @@ img{
     top: 1.6rem;
     right: 2rem;
     width: 8rem;
-    height: 8rem;   
+    height: 8rem;
 }
 .shenpi_icon_r_3{
 	background:url(../img/shenpi_icon_r_3.png) no-repeat;
@@ -1448,17 +1448,17 @@ img{
     top: 1.6rem;
     right: 2rem;
     width: 8rem;
-    height: 8rem;   
+    height: 8rem;
 }
 .shenpi_bor_line{
 	border-top: 1px solid #eee;
     padding: 0.2rem 0 0 0;
     position:relative;
-	
+
 }
 .shenpi_bor_line2{
 	border-top: 1px solid #eee;
-	
+
 }
 .gray_smaoll{
 	color:#BFBFBF !important
@@ -1496,7 +1496,7 @@ img{
 
 
 .overflow_table_to::-webkit-scrollbar-thumb , .elearn_top_cont::-webkit-scrollbar-thumb , .elearn_input textarea::-webkit-scrollbar-thumb{
-		  background-color: #A3A3A3; 
+		  background-color: #A3A3A3;
 		  border-radius: 9px;
 		  -webkit-border-radius: 9px;
 	} /* 滑块颜色 */
@@ -1618,7 +1618,7 @@ img{
   border-width: 0px;
   margin:0;
   padding:0;
-  
+
   }
  .elearining_search{
   display: flex;
@@ -1632,7 +1632,7 @@ img{
   -moz-user-select:none;
   -ms-user-select:none;
   user-select:none;
-} 
+}
 .elearining_search_img{
 	width:10rem;
 	height:10rem;
@@ -2016,10 +2016,10 @@ img{
     height: 1.4rem;
  }
  .index_search_bor{
-	border-bottom: 0.5rem #f4f4f4 solid;		
+	border-bottom: 0.5rem #f4f4f4 solid;
 }
  .index_search_bor_10{
-	border-bottom: 1rem #f4f4f4 solid;		
+	border-bottom: 1rem #f4f4f4 solid;
 }
 .index_search_small{
 	font-size:1.2rem ;
@@ -2201,7 +2201,7 @@ img{
 .btn_danger{
 	border:1px solid #F46A55;
 	background:#fff;
-	color:#F46A55;	
+	color:#F46A55;
 }
 .btn_default{
 	border:1px solid #fff;
@@ -2355,7 +2355,7 @@ ul.late_remark li:last-child{
     color: #333;
     font-weight: bold;
 }
-.index_tit_rg{ 
+.index_tit_rg{
     color: #999;
     font-size: 1.4rem;
     text-align: center;
@@ -2378,7 +2378,7 @@ ul.late_remark li:last-child{
         position: absolute;
         width: 100%;
         top: 0;
-        left:0;  
+        left:0;
 }
 .index_pab{
     border-top: 1px solid #e5e5e5;
@@ -2403,7 +2403,7 @@ ul.late_remark li:last-child{
     background-size: contain;
     margin: 0 auto;
 }
-.more_about_warp{  
+.more_about_warp{
     color: #999;
     font-size: 1.4rem;
     text-align: center;
@@ -2490,7 +2490,7 @@ ul.late_remark li:last-child{
 
 
 .attendance_layer::-webkit-scrollbar-thumb {
-		  background-color: #b5b5b5; 
+		  background-color: #b5b5b5;
 		  border-radius: 2px;
 		  -webkit-border-radius: 2px;
 	} /* 滑块颜色 */
@@ -2498,7 +2498,7 @@ ul.late_remark li:last-child{
 .attendance_layer::-webkit-scrollbar-button {
 		  background-color: initial;
 	} /* 滑轨两头的监听按钮颜色 */
-	
+
 	.find_nav_left::-webkit-scrollbar {
 		  width: 3px;
 		  height:3px;
@@ -2506,7 +2506,7 @@ ul.late_remark li:last-child{
 
 
 .find_nav_left::-webkit-scrollbar-thumb {
-		  background-color: #fff; 
+		  background-color: #fff;
 		  border-radius: 2px;
 		  -webkit-border-radius: 2px;
 	} /* 滑块颜色 */
@@ -2514,7 +2514,7 @@ ul.late_remark li:last-child{
 .find_nav_left::-webkit-scrollbar-button {
 		  background-color: initial;
 	} /* 滑轨两头的监听按钮颜色 */
-	
+
 .find_nav_list {
     position: absolute;
     left: 0;
@@ -2636,7 +2636,7 @@ ul.late_remark li:last-child{
     background-position:0 -52rem;
  }
  .swiper_elearning_banner .swiper-slide {
-      height: 160px; 
+      height: 160px;
       background: #e2e2e2;
     }
 .swiper_elearning_banner .swiper-container-horizontal>.swiper-pagination-bullets, .elearning_banner .swiper-pagination-custom,  .elearning_banner .swiper-pagination-fraction{
@@ -2720,7 +2720,7 @@ ul.late_remark li:last-child{
     -ms-transform:translate(-50%, -50%); /* IE 9 */
     -moz-transform:translate(-50%, -50%); /* Firefox */
     -webkit-transform:translate(-50%, -50%); /* Safari 和 Chrome */
-    -o-transform:translate(-50%, -50%);  
+    -o-transform:translate(-50%, -50%);
 }
 .elearn_c_v_icon2{
 	 width: 8rem;
@@ -3023,7 +3023,7 @@ hr.course2:before, hr.course3:before{
     resize:none;
 }
 .elearn_input textarea::-webkit-scrollbar-thumb{
-	 background-color: #f4f4f4 !important; 
+	 background-color: #f4f4f4 !important;
 }
 .elearn_grade_c{
    padding:.5rem 1rem;
@@ -3046,7 +3046,7 @@ hr.course2:before, hr.course3:before{
 	-webkit-transform-origin: 0 0;
 }
 .purchase_banner .swiper-container-horizontal>.swiper-pagination-bullets, .swiper-pagination-custom, .swiper-pagination-fraction{
-	
+
 	bottom:8px;
 }
 .purchase_banner .swiper-container-horizontal>.swiper-pagination-bullets .swiper-pagination-bullet{
@@ -3084,7 +3084,7 @@ hr.course2:before, hr.course3:before{
 .courseSpan div:nth-of-type(4n+1){
 		margin-left:0;
 	}
-.courseSpan span {   
+.courseSpan span {
  	/* padding: 8px 25%;
     background: #f4f4f4;
     position: relative;
@@ -3095,7 +3095,7 @@ hr.course2:before, hr.course3:before{
     display: inline-block;
     text-align: center;
     font-size: 1.3rem;*/
-} 
+}
 
 .select_border{
     background: #ffeee6;
@@ -3232,9 +3232,9 @@ border-bottom:1px solid #dfdfdd;
     background: #fff;
     color: #f56a55;
     border: 1px solid #f56a55;
-    line-height: 1.2rem; 
+    line-height: 1.2rem;
     padding: 0.1rem 0.4rem;
-    margin-top: 2px; 
+    margin-top: 2px;
     margin-right: .8rem;
     color: #f56a55;
     border-radius: 2px;
@@ -3309,7 +3309,7 @@ border-bottom:1px solid #dfdfdd;
     font-size:1.2rem;
 }
 .lesson_name{
-	font-size:1.4rem;	
+	font-size:1.4rem;
 	margin-bottom:1rem;
 	vertical-align: top;
 }
@@ -3587,8 +3587,8 @@ border-bottom:1px solid #dfdfdd;
 }
 .table_viewtime_td{
 	display:flex;
-	display: -webkit-box; 
-    display: -moz-box; 
+	display: -webkit-box;
+    display: -moz-box;
     display:-webkit-flex;
     display: -ms-flexbox;
     flex: 1;
@@ -3732,7 +3732,7 @@ border-bottom:1px solid #dfdfdd;
     margin: 2rem auto 1rem auto;
 }
 .viewtime_td_le{
-	word-break: normal;	
+	word-break: normal;
 }
 .viewtime_td_le2{
 	margin-right:.4rem;
@@ -3760,13 +3760,13 @@ border-bottom:1px solid #dfdfdd;
 			height:1rem;
 			background:#f4f4f4;
 		}
-	
+
 		.classUser_detail div{
 		       font-size: 1.4rem;
 			    color: #666;
 			    line-height: 2.5rem;
 		}
-	
+
 		.classUser_detail .btnarea{
 			 text-align: center;
    			 margin-top: 1rem;
@@ -3778,7 +3778,7 @@ border-bottom:1px solid #dfdfdd;
 		    line-height:3.5rem;
 		    border: none;
 		    border-radius: 4px;
-		    font-size:1.4rem;	
+		    font-size:1.4rem;
 			background:#fff;
 		    border: 1px solid #fa6a55;
 		    color:#fa6a55;
@@ -3790,7 +3790,7 @@ border-bottom:1px solid #dfdfdd;
 		      line-height:3.5rem;
 		    border: none;
 		    border-radius: 4px;
-		    font-size:1.4rem;	
+		    font-size:1.4rem;
 		   background: #fa6a55;
 		   color:#fff;
 		}
@@ -3860,7 +3860,7 @@ border-bottom:1px solid #dfdfdd;
 
 
 .view_layer_cont_hei::-webkit-scrollbar-thumb{
-		  background-color: #ccc; 
+		  background-color: #ccc;
 		  border-radius: 9px;
 		  -webkit-border-radius: 9px;
 	} /* 滑块颜色 */
@@ -3922,7 +3922,7 @@ border-bottom:1px solid #dfdfdd;
 .punish_input_le{
 	width:7rem;
 	color:#424242;
-	
+
 }
 .punish_input_r{
 	width:calc(100% - 8rem);
@@ -4432,7 +4432,7 @@ border-bottom:1px solid #dfdfdd;
 	height:100%;
 	z-index:100;
 	left:0;
-	top:0;	
+	top:0;
 }
 .aproval_header_top{
 	height:84px;
@@ -4591,7 +4591,7 @@ br{
 	color:#73B6F5;
 	height: 40px;
 	line-height: 5.5;
-	    
+
 }
 .cloudFileShow_foot .down{
 	background:url("../img/icon_share.png") no-repeat center top;
@@ -4859,7 +4859,7 @@ br{
     overflow:hidden;
 }
 .elearning_videoCont video::-webkit-media-controls-panel {
-    width: calc(100% + 50px); 
+    width: calc(100% + 50px);
 }
 .elearning_videoCont_wrap{
 	width:660px;
@@ -4996,6 +4996,9 @@ br{
 	-moz-box-direction:normal;
 	flex-direction:column;
 	-webkit-flex-direction:column;
+}
+.videoSource .list-item .right-item-2{
+	width:calc(100% - 80px);
 }
 .videoSource .list-item .right{
 	overflow: hidden;
@@ -5269,13 +5272,14 @@ span.justify > span {
 }
 .inputWrap #rtsUrl{
 	position: absolute;
-	width: 175px;
-	top: 29px;
-	left: 12px;
+	width:calc(100% - 2px);
+	top: 27px;
+	left: 0;
 	border: 1px #e5e5e5 solid;
 	background: white;
 	max-height: 222px;
 	overflow-y: auto;
+	z-index: 1;
 }
 .inputWrap #rtsUrl > div{
 	padding: 8px 5px 8px 5px;
